extensions/tree-sitter-jfx/test/corpus/basics.txt
================================================================================
Empty object
================================================================================

{}

--------------------------------------------------------------------------------

(document
  (object))

================================================================================
Empty array
================================================================================

[]

--------------------------------------------------------------------------------

(document
  (array))

================================================================================
Simple object with double-quoted strings
================================================================================

{"name": "John", "age": 30}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (string (double_quoted_string (string_content)))
        value: (string (double_quoted_string (string_content))))
      (pair
        key: (string (double_quoted_string (string_content)))
        value: (number)))))

================================================================================
Object with single-quoted strings
================================================================================

{'name': 'John'}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (string (single_quoted_string (single_string_content)))
        value: (string (single_quoted_string (single_string_content)))))))

================================================================================
Object with unquoted keys and values
================================================================================

{apple: red, banana: yellow}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (unquoted_key)
        value: (unquoted_string))
      (pair
        key: (unquoted_key)
        value: (unquoted_string)))))

================================================================================
Line comment
================================================================================

{
  name: "John"
  // this is a comment
}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (unquoted_key)
        value: (string (double_quoted_string (string_content))))
      (comment))))

================================================================================
Block comment
================================================================================

/* header comment */
{name: "John"}

--------------------------------------------------------------------------------

(document
  (comment)
  (object
    (object_content
      (pair
        key: (unquoted_key)
        value: (string (double_quoted_string (string_content)))))))

================================================================================
Boolean and null values
================================================================================

{enabled: true, disabled: false, nothing: null}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (unquoted_key)
        value: (true))
      (pair
        key: (unquoted_key)
        value: (false))
      (pair
        key: (unquoted_key)
        value: (null)))))

================================================================================
Array with mixed types
================================================================================

["one", 2, true, null]

--------------------------------------------------------------------------------

(document
  (array
    (array_content
      (string (double_quoted_string (string_content)))
      (number)
      (true)
      (null))))

================================================================================
Trailing comma in object
================================================================================

{name: "John",}

--------------------------------------------------------------------------------

(document
  (object
    (object_content
      (pair
        key: (unquoted_key)
        value: (string (double_quoted_string (string_content)))))))

================================================================================
Trailing comma in array
================================================================================

[1, 2, 3,]

--------------------------------------------------------------------------------

(document
  (array
    (array_content
      (number)
      (number)
      (number))))
